<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LastScreen">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"


        android:layout_marginTop="97dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/introduceEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutPassword"
        android:layout_width="342dp"
        android:layout_height="113dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundColor="#FDFDFD"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="Enter Strong Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_shape_fondolila"
        android:textColor="@color/white"
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bton_Sing_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/forgot"
        android:textColor="#8E24AA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

</androidx.constraintlayout.widget.ConstraintLayout>